# aibot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  example1.py  main.py  pyproject.toml  requirements.txt
src/: chatbot.py  web_interface.py
